Fix GaG logo on mobile and CSS tweaks

--- a/site.css
+++ b/site.css
@@ -99,14 +99,15 @@ body {
   }
 
   .header__inner-wrapper {
-    height: 300px;
     width: 100%;
     position: absolute;
-    top: 60px;
+    top: 70px;
     left: 0;
     padding-left: 8px;
     background-color: #111;
     flex-direction: column;
+    justify-content: flex-start;
+    padding-bottom: 16px;
   }
 
   .header__inner-wrapper--open {
@@ -132,10 +133,10 @@ body {
     position: absolute;
     margin-left: auto;
     margin-right: auto;
-    top: -48px;
-    /* left: 35vw; */
+    top: -54px;
     left: 0;
     right: 0;
+    visibility: visible;
   }
 }
 
